[-] FO: fixed some css bugs = bad z-index on category page and add margin on wishlist link

--- a/themes/default-bootstrap/sass/global.sass
+++ b/themes/default-bootstrap/sass/global.sass
@@ -612,7 +612,12 @@ table.table_block td
 	height: 85px
 	width: 85px
 	text-align: center
-	z-index: 100
+	z-index: 0
+
+#product
+	.new-box,
+	.sale-box
+		z-index: 100
 
 .new-box
 	left: -4px
